; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-scheme.c_tl_scheme_object_new.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-scheme.c_tl_scheme_object_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_scheme_object = type { i32 }

@tlso_list = common dso_local global i32 0, align 4
@obj_empty_list = common dso_local global %struct.tl_scheme_object zeroinitializer, align 4
@tlso_open_square_bracket = common dso_local global i32 0, align 4
@tlso_open_round_bracket = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.tl_scheme_object* @tl_scheme_object_new(i32 %0) #0 {
  %2 = alloca %struct.tl_scheme_object*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.tl_scheme_object*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @tlso_list, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.tl_scheme_object* @obj_empty_list, %struct.tl_scheme_object** %2, align 8
  br label %26

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @tlso_open_square_bracket, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @tlso_open_round_bracket, align 4
  %16 = icmp ne i32 %14, %15
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi i1 [ false, %9 ], [ %16, %13 ]
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = call %struct.tl_scheme_object* @zmalloc0(i32 4)
  store %struct.tl_scheme_object* %21, %struct.tl_scheme_object** %4, align 8
  %22 = load i32, i32* %3, align 4
  %23 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %4, align 8
  %24 = getelementptr inbounds %struct.tl_scheme_object, %struct.tl_scheme_object* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %4, align 8
  store %struct.tl_scheme_object* %25, %struct.tl_scheme_object** %2, align 8
  br label %26

26:                                               ; preds = %17, %8
  %27 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %2, align 8
  ret %struct.tl_scheme_object* %27
}

declare dso_local i32 @assert(i32) #1

declare dso_local %struct.tl_scheme_object* @zmalloc0(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
